# MM-server

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt
app/mmApp/: CMakeLists.txt  mmRun.c  mmRunDef.h  mmRunExt.c  mmRunExt.h  mmRunTask.c  mmmApp.c  mmmAppDef.h  mmmAppExt.c  mmmAppExt.h  mmmAppJson.c  mmmAppJson.h  mmmAppMQ.c  mmmAppMQ.h  mmmAppPipe.c  mmmAppPipe.h  mmmAppSHM.c  mmmAppSHM.h  mmmAppSOCK.c  mmmAppSOCK.h  mmmAppTask.c  mmmAppType.h
app/mmApp/config/: mm.json
app/mmApp/config/Logger/: logger.json
app/mmApp/config/Server/: FSM.json  logger.json
app/mmApp/config/Worker/: FSM.json
app/mmApp/plugin/: CMakeLists.txt
app/mmApp/plugin/testID/: CMakeLists.txt  testID.c  testIDDef.h  testIDExt.c  testIDExt.h  testIDTask.c
app/mmApp/plugin/testPython/: CMakeLists.txt  testPython.c  testPythonDef.h  testPythonExt.c  testPythonExt.h  testPythonTask.c
app/mmApp/plugin/testServer/: CMakeLists.txt  testServer.c  testServerDef.h  testServerExt.c  testServerExt.h  testServerTask.c
app/mmApp/plugin/testServerWorker/: CMakeLists.txt  testServerWorker.c  testServerWorkerDef.h  testServerWorkerExt.c  testServerWorkerExt.h  testServerWorkerTask.c
app/mmApp/so/: CMakeLists.txt
app/mmApp/so/app/: CMakeLists.txt
app/mmApp/so/app/mmmPlugin/: CMakeLists.txt  mmmPlugin.c  mmmPluginDef.h  mmmPluginExt.c  mmmPluginExt.h  mmmPluginTask.c
app/mmApp/so/app/subThread/: CMakeLists.txt  subThread.c  subThreadDef.h  subThreadExt.c  subThreadExt.h  subThreadTask.c
app/mmApp/so/lib/: CMakeLists.txt
app/mmApp/so/lib/mmmServerVariable/: CMakeLists.txt  mmmServerVariable.c  mmmServerVariableDef.h  mmmServerVariableExt.c  mmmServerVariableExt.h  mmmServerVariableTask.c
app/mmApp/so/lib/rest/: CMakeLists.txt  rest.c  restDef.h  restExt.c  restExt.h  restTask.c
app/mmCmd/: CMakeLists.txt  mmCmd.c  mmCmdDef.h  mmCmdExt.c  mmCmdExt.h  mmCmdTask.c
configure/: CMakeLists.txt  mmConfigure.c  mmConfigureDef.h  mmConfigureExt.c  mmConfigureExt.h  mmConfigureTask.c
lib/: CMakeLists.txt  mmLogSimple.c  mmLogSimple.h
lib/base/: CMakeLists.txt  mmBaseType.c  mmBaseType.h  mmEtc.c  mmEtc.h  mmFile.c  mmFile.h  mmIPC.c  mmIPC.h  mmMemory.c  mmMemory.h  mmMultiplex.c  mmMultiplex.h  mmSocket.c  mmSocket.h  mmString.c  mmString.h  mmTime.c  mmTime.h
lib/kit/: CMakeLists.txt
lib/kit/FSM/: CMakeLists.txt  mmFSM.c  mmFSM.h
lib/kit/URL/: CMakeLists.txt  mmURL.c  mmURL.h
lib/kit/base64/: CMakeLists.txt  base64.c  base64.h
lib/kit/email/: CMakeLists.txt  email.c  email.h
lib/kit/json/: CMakeLists.txt  mmJson.c  mmJson.h  mmJsonE.c  mmJsonE.h
lib/kit/log/: CMakeLists.txt  mmLog.c  mmLog.h
lib/kit/process/: CMakeLists.txt  mmProcess.c  mmProcess.h
lib/kit/structure/: CMakeLists.txt  mmCircularLinkedList.c  mmCircularLinkedList.h  mmLinkedList.c  mmLinkedList.h  mmQueue.c  mmQueue.h  mmStack.c  mmStack.h  mmTree.c  mmTree.h
lib/kit/thread/: CMakeLists.txt  mmThread.c  mmThread.h
run/: mmCmd  mmConfigure  mmRun  mmmApp
run/config/: mm.json
run/config/Logger/: logger.json
run/config/Server/: immanence.json  logger.json
run/plugin/py/: testPython.py
